<resources>
    <string name="app_name">YourCityEvents</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="upcoming_events_in">Upcoming events in</string>
    <string name="login">Login</string>
    <string name="bio">Bio</string>
    <string name="your_city">Your city</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="submit">Submit</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="create_event">Create event</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="event_name">Event name</string>
    <string name="event_desc">Event description</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="end">End</string>
    <string name="start">Start</string>
</resources>
