<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".modules.auth.login.view.LoginActivity"
        tools:showIn="@layout/login_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/first_field_top_margin">
            <TextView
                android:id="@+id/app_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_marginBottom="65dp"
                android:textSize="36sp"/>
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:layout_width="@dimen/sign_field_len"
                android:layout_height="wrap_content"
                app:labelText="@string/email"
                >

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/email"
                    android:layout_width="@dimen/sign_field_len"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:layout_width="@dimen/sign_field_len"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/second_field_top_margin"
                app:labelText="@string/password"
                >

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/sign_field_len"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="@dimen/sign_field_len"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:gravity="end"
                android:textSize="16sp"
                android:focusable="true" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="@dimen/sign_field_len"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="Button" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/dont_have_acc"
                android:gravity="end"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="24dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:clickable="true"
                android:gravity="end"
                android:textSize="16sp"
                android:focusable="true"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        </LinearLayout>





        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_waves_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>